--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -33,6 +33,8 @@
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-funcao.css">
         <link rel="stylesheet" href="./assets/css/pessoa/pessoa-nome.css">
         <link rel="stylesheet" href="./assets/css/pessoas.css">
+        <link rel="stylesheet" href="./assets/css/rodape.css">
+        <link rel="stylesheet" href="./assets/css/logo.css">
 
     </head>
     <body>
@@ -132,5 +134,8 @@
             </div>
         </section>
 
+        <footer class="rodape">
+            Contato: exemplo@email.com.br
+        </footer>
     </body>
 </html>
